[package]
name = "dairi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4"
pico-args = "0.4"
tokio = { version = "1.17", features = ["rt-multi-thread", "fs", "macros","process","io-util","test-util"] }
thiserror = "1"
toml = "0.5"
serde = { version = "1", features =["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
axum = "0.4"
tower = { version = "0.4", features = ["util","timeout"]}
serde_json = "1.0"
hyper = { version = "0.14", features = ["http2", "client"] }
once_cell = "1.10"
mlua = { version = "0.7", features = ["luajit", "vendored", "module", "macros", "send", "async"] }
sysinfo = "0.23"
bytes = "1.1"
regex = "1.5"


[[bin]]
name = "dairi-server"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
